--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_DSN=root:wildanzulfikar110924@tcp(127.0.0.1:3306)/opac?charset=utf8mb4&parseTime=True&loc=Local
+DB_DSN=root:@tcp(127.0.0.1:3306)/bebas_pustaka?charset=utf8mb4&parseTime=True&loc=Local
